--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,7 +6,10 @@
         android:showAsAction="never" 
         android:title="@string/action_settings"/>
 	<item 
-	    android:id="@+id/light_threading"
+	    android:id="@+id/light_threashing"
 	    android:title="@string/act_light"/>
+	<item 
+	    android:id="@+id/rm_data"
+	    android:title="@string/rm_data"/>
 	
 </menu>
